--- a/LeetCode_Cpp/LeetCode_Cpp/LeetCode_Cpp.vcxproj
+++ b/LeetCode_Cpp/LeetCode_Cpp/LeetCode_Cpp.vcxproj
@@ -156,7 +156,12 @@
   <ItemGroup>
     <ClInclude Include="unity_test.h" />
     <ClInclude Include="_1_Two_Sum.h" />
+    <ClInclude Include="_20_Valid_Parentheses.h" />
     <ClInclude Include="_216_Combination_Sum_III.h" />
+    <ClInclude Include="_230_Kth_Smallest_Element_in_a_BST.h" />
+    <ClInclude Include="_239_Sliding_Window_Maximum.h" />
+    <ClInclude Include="_242_Valid_Anagram.h" />
+    <ClInclude Include="_25_Reverse_Nodes_in_k_Group.h" />
     <ClInclude Include="_2_Add_Two_Numbers.h" />
     <ClInclude Include="_377_Combination_Sum_IV.h" />
     <ClInclude Include="_40_Combination_Sum_II.h" />
@@ -176,6 +181,7 @@
     <ClInclude Include="_448_Find_All_Numbers_Disappeared_in_an_Array.h" />
     <ClInclude Include="_461_Hamming_Distance.h" />
     <ClInclude Include="_49_Group_Anagrams.h" />
+    <ClInclude Include="_739_Daily_Temperatures.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LeetCode_Cpp.cpp" />
