--- a/LeetCode_Cpp/LeetCode_Cpp/LeetCode_Cpp.vcxproj.filters
+++ b/LeetCode_Cpp/LeetCode_Cpp/LeetCode_Cpp.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="_215_Kth_Largest_Element_in_an_Array.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="_91_Decode_Ways.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
