--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj
@@ -175,7 +175,7 @@
     <ClInclude Include="_09_QueueWithTwoStacks.h" />
     <ClInclude Include="_10_Fibonacci.h" />
     <ClInclude Include="_11_MinNumberInRotatedArray.h" />
-    <ClInclude Include="_12_PrintOneToN.h" />
+    <ClInclude Include="_12_StringPathInMatrix.h" />
     <ClInclude Include="_14_OrderOddNumberFirst.h" />
     <ClInclude Include="_15_ChainList.h" />
     <ClInclude Include="_17_Tree.h" />
