--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
@@ -62,9 +62,6 @@
     <ClInclude Include="resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="_12_PrintOneToN.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="_14_OrderOddNumberFirst.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -123,6 +120,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="_11_MinNumberInRotatedArray.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="_12_StringPathInMatrix.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
