--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="_15_NumberOf1InBinary.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="_16_Power.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
