--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="_12_PrintOneToN.cpp" />
     <ClCompile Include="_14_OrderOddNumberFirst.cpp" />
     <ClCompile Include="_15_ChainList.cpp" />
+    <ClCompile Include="_17_Print1ToMaxOfNDigits.cpp" />
     <ClCompile Include="_17_Tree.cpp" />
     <ClCompile Include="_18_Tree.cpp" />
     <ClCompile Include="_20_PrintMatrix.cpp" />
@@ -179,9 +180,9 @@
     <ClInclude Include="_13_RobotMove.h" />
     <ClInclude Include="_14_CuttingRope.h" />
     <ClInclude Include="_14_OrderOddNumberFirst.h" />
-    <ClInclude Include="_15_ChainList.h" />
     <ClInclude Include="_15_NumberOf1InBinary.h" />
     <ClInclude Include="_16_Power.h" />
+    <ClInclude Include="_17_Print1ToMaxOfNDigits.h" />
     <ClInclude Include="_17_Tree.h" />
     <ClInclude Include="_18_Tree.h" />
     <ClInclude Include="_01_AssignmentOperator.h" />
