--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj
@@ -188,7 +188,9 @@
     <ClInclude Include="_18_Tree.h" />
     <ClInclude Include="_01_AssignmentOperator.h" />
     <ClInclude Include="_19_RegularExpressionsMatching.h" />
+    <ClInclude Include="_20_NumericStrings.h" />
     <ClInclude Include="_20_PrintMatrix.h" />
+    <ClInclude Include="_21_ReorderArray.h" />
     <ClInclude Include="_21_StackWithMin.h" />
     <ClInclude Include="_22_StackPushPopOrder.h" />
   </ItemGroup>
