--- a/DataStructure_Cs/DataStructure.csproj
+++ b/DataStructure_Cs/DataStructure.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataStucture\ChainList.cs" />
+    <Compile Include="DataStucture\Dictionary.cs" />
+    <Compile Include="DataStucture\Hashtable.cs" />
     <Compile Include="DataStucture\Heap.cs" />
     <Compile Include="DataStucture\InfixToSuffix.cs" />
     <Compile Include="DataStucture\LinkListTest.cs" />
