--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -66,6 +66,7 @@
     <None Include="Interview\数据库\数据库范式.md" />
     <None Include="Interview\数据库\索引的工作原理及其种类.md" />
     <None Include="Interview\数据结构.md" />
+    <None Include="Interview\经验.md" />
     <None Include="Interview\算法.md" />
     <None Include="Interview\网络.md" />
     <None Include="Interview\设计模式.md" />
