--- a/LeetCode_Cpp/LeetCode_Cpp.vcxproj
+++ b/LeetCode_Cpp/LeetCode_Cpp.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="_239_Sliding_Window_Maximum.h" />
     <ClInclude Include="_242_Valid_Anagram.h" />
     <ClInclude Include="_25_Reverse_Nodes_in_k_Group.h" />
+    <ClInclude Include="_287_Find_the_Duplicate_Number.h" />
     <ClInclude Include="_2_Add_Two_Numbers.h" />
     <ClInclude Include="_377_Combination_Sum_IV.h" />
     <ClInclude Include="_40_Combination_Sum_II.h" />
