--- a/LeetCode_Cpp/LeetCode_Cpp.vcxproj.filters
+++ b/LeetCode_Cpp/LeetCode_Cpp.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="_91_Decode_Ways.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="_287_Find_the_Duplicate_Number.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
