--- a/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
+++ b/ToOffer_Cpp/ToOffer_Cpp.vcxproj.filters
@@ -185,5 +185,8 @@
     <ClInclude Include="_34_PathInTree.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="_35_CopyComplexList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
