--- a/LeetCode_Cpp/LeetCode_Cpp.vcxproj
+++ b/LeetCode_Cpp/LeetCode_Cpp.vcxproj
@@ -155,11 +155,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="unity_test.h" />
+    <ClInclude Include="_105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.h" />
+    <ClInclude Include="_106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.h" />
+    <ClInclude Include="_114_Flatten_Binary_Tree_to_Linked_List.h" />
+    <ClInclude Include="_116_Populating_Next_Right_Pointers_in_Each_Node.h" />
     <ClInclude Include="_147_Insertion_Sort_List.h" />
     <ClInclude Include="_1_Two_Sum.h" />
     <ClInclude Include="_20_Valid_Parentheses.h" />
     <ClInclude Include="_215_Kth_Largest_Element_in_an_Array.h" />
     <ClInclude Include="_216_Combination_Sum_III.h" />
+    <ClInclude Include="_226_Invert_Binary_Tree.h" />
     <ClInclude Include="_230_Kth_Smallest_Element_in_a_BST.h" />
     <ClInclude Include="_239_Sliding_Window_Maximum.h" />
     <ClInclude Include="_242_Valid_Anagram.h" />
@@ -184,8 +189,11 @@
     <ClInclude Include="_448_Find_All_Numbers_Disappeared_in_an_Array.h" />
     <ClInclude Include="_461_Hamming_Distance.h" />
     <ClInclude Include="_46_Permutations.h" />
+    <ClInclude Include="_47_Permutations_II.h" />
     <ClInclude Include="_49_Group_Anagrams.h" />
+    <ClInclude Include="_654_Maximum_Binary_Tree.h" />
     <ClInclude Include="_739_Daily_Temperatures.h" />
+    <ClInclude Include="_740_Delete_and_Earn.h" />
     <ClInclude Include="_744_Find_Smallest_Letter_Greater_Than_Target.h" />
     <ClInclude Include="_91_Decode_Ways.h" />
     <ClInclude Include="_983_Minimum_Cost_For_Tickets.h" />
